# RTXNS

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
assets/data/: slangpy-weights.json
docs/: LibraryGuide.md  QuickStart.md  ShaderTraining.md  SimpleInferencing.md  SimpleTraining.md  SlangpyTraining.md  Tutorial.md
samples/: CMakeLists.txt
samples/ShaderTraining/: CMakeLists.txt  DisneyMLP.h  NetworkConfig.h  ShaderTraining.cpp  computeOptimizer.slang  computeTraining.slang  renderDifference.slang  renderDisney.slang  renderInference.slang  shaders.cfg
samples/SimpleInferencing/: CMakeLists.txt  SimpleInferencing.cpp  SimpleInferencing.slang
samples/SimpleTraining/: CMakeLists.txt  NetworkConfig.h  SimpleTraining.cpp  SimpleTraining_Inference.slang  SimpleTraining_Optimizer.slang  SimpleTraining_Training.slang  shaders.cfg
samples/SlangpyInferencing/: CMakeLists.txt  SlangpyInferencing.cpp  SlangpyInferencing.py
samples/SlangpyTraining/: CMakeLists.txt  Helpers.py  NeuralModules.py  NeuralModules.slang  SlangpyInference.cpp  SlangpyInference.slang  SlangpyTraining.py  SlangpyTraining.slang  requirements.txt
src/NeuralShading/: CMakeLists.txt  CoopVector.cpp  CoopVector.h  GraphicsResources.cpp  GraphicsResources.h  LearningRateScheduler.cpp  NeuralNetwork.cpp  NeuralNetwork.h
src/NeuralShading_Shaders/: LinearOps.slang  Loss.slang  MLP.slang  Optimizers.slang  Utils.slang
src/Utils/: CMakeLists.txt  DeviceUtils.cpp  DeviceUtils.h  ResultsWidget.cpp  ResultsWidget.h
support/cmake/: FetchImplot.cmake
